Fix controls spacing

--- a/digital-clock/base.css
+++ b/digital-clock/base.css
@@ -236,6 +236,7 @@ div {
 .controls {
 	position: relative;
 	height: 100%;
+	margin-top: 10px;
 	text-align: center;
 	z-index: 101;
 }
